--- a/FlashGen/Resources/zh-Hans.lproj/Localizable.strings
+++ b/FlashGen/Resources/zh-Hans.lproj/Localizable.strings
@@ -132,6 +132,9 @@
 "home.filter_button.accessibility_label" = "排序卡片集";
 "tile.difficulty.accessibility_label" = "%@ 难度";
 
+"generate.count.min" = "5";
+"generate.count.max" = "20";
+
 // Mark: Generate Accessibility
 "generate.count.min" = "5";
 "generate.count.max" = "20";
