--- a/FlashGen/Resources/hi.lproj/Localizable.strings
+++ b/FlashGen/Resources/hi.lproj/Localizable.strings
@@ -97,6 +97,7 @@
 "flashcard.answer" = "उत्तर";
 
 // Mark: Settings
+"settings.title" = "सेटिंग्स";
 "settings.guest.title" = "अतिथि उपयोगकर्ता";
 "settings.guest.subtitle" = "अपने फ्लैशकार्ड सहेजने के लिए साइन इन करें";
 "settings.account.header" = "खाता";
@@ -118,7 +119,7 @@
 
 
 // Mark: Login
-"login.app_name" = "FlashGen";
+"login.app_name" = "FlashGen AI";
 "login.subtitle" = "एआई-संचालित फ्लैशकार्ड";
 "login.google_button" = "Google के साथ साइन इन करें";
 "login.guest_button" = "अतिथि के रूप में जारी रखें";
@@ -132,9 +133,6 @@
 "home.filter_button.accessibility_label" = "फ्लैशकार्ड सेट क्रमबद्ध करें";
 "tile.difficulty.accessibility_label" = "%@ कठिनाई";
 
-"generate.count.min" = "5";
-"generate.count.max" = "20";
-
 // Mark: Generate Accessibility
 "generate.count.min" = "5";
 "generate.count.max" = "20";
@@ -142,7 +140,6 @@
 "generate.preview.empty.accessibility_label" = "खाली पूर्वावलोकन। विवरण देखने के लिए एक विषय दर्ज करें।";
 
 // Mark: Settings Accessibility
-"settings.title" = "सेटिंग्स";
 "settings.profile_picture" = "प्रोफ़ाइल चित्र";
 
 // Mark: Flashcards Accessibility
